tdf#121216 Fix custom pattern not displayed in area tab page

pattern editor on reopening

Change-Id: I1c77dff4bfebc9f4a2661210f5bbbaa8573a90db